# capture-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  capture-api-delete-asset.sh  capture-api-export-asset-and-nft.sh  capture-api-get-asset-total-number.sh  capture-api-get-token-by-email.sh  capture-api-list-asset-nids.sh  capture-api-list-orders.sh  capture-api-mint-license-nft.sh  capture-api-mint-nft.sh  capture-api-query-asset.sh  capture-api-register-asset.sh  capture-api-show-num-balance.sh  capture-api-sign-up-by-email.sh  capture-api-unregister-asset.sh  capture-api-verify-token.sh  example.ts  ipfs-check-nid-exist.sh  ipfs-check-pinning-status.sh  ipfs-generate-nid-by-api.sh  ipfs-generate-nid-by-local-node.sh  ipfs-generate-nid-locally.sh  ipfs-pin-local-file.sh  ipfs-unpin-asset-nid.sh  nit-api-commit.sh  nse-api-detect-theft.sh  nse-api-search-asset.sh  package.json  tsconfig.json
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: PLAN.md
integration-tests/: README.md  package.json  requirements.txt  test-published-sdk.ts  test_published_sdk.py
python/: .gitignore  README.md  example.py  pyproject.toml
python/capture_sdk/: __init__.py  client.py  crypto.py  errors.py  types.py
python/numbersprotocol_capture/: __init__.py  client.py  crypto.py  errors.py  types.py  verify.py
python/tests/: __init__.py  test_asset_search.py  test_asset_tree.py  test_client.py  test_client_api.py  test_core_operations.py  test_crypto.py  test_errors.py  test_integration.py  test_retry_and_resilience.py  test_verify.py
scripts/: check-feature-parity.py  sync-versions.py
src/: client.ts  index.ts  types.ts
ts/: README.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
ts/src/: client.test.ts  client.ts  crypto.test.ts  crypto.ts  errors.test.ts  errors.ts  index.ts  integration.test.ts  types.ts  verify.ts
