[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numbersprotocol-capture-sdk"
version = "0.2.1"
description = "Python SDK for Numbers Protocol Capture API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Numbers Protocol" }
]
keywords = [
    "numbers-protocol",
    "capture",
    "blockchain",
    "provenance",
    "digital-assets",
    "web3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "eth-account>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/numbersprotocol/capture-sdk"
Documentation = "https://github.com/numbersprotocol/capture-sdk#readme"
Repository = "https://github.com/numbersprotocol/capture-sdk"
Issues = "https://github.com/numbersprotocol/capture-sdk/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/numbersprotocol_capture",
]

[tool.hatch.build.targets.wheel]
packages = ["numbersprotocol_capture"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["numbersprotocol_capture"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=numbersprotocol_capture --cov-report=term-missing"

[tool.coverage.run]
source = ["numbersprotocol_capture"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
